--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@supabase/supabase-js": "^2.90.1",
     "clsx": "^2.1.1",
     "expo": "~54.0.31",
+    "expo-av": "~15.0.2",
     "expo-constants": "~18.0.13",
     "expo-font": "~14.0.10",
     "expo-keep-awake": "^15.0.8",
